turnip: dEQP-VK.pipeline.render_to_image.core.* failures on a618
deqp-vk -n dEQP-VK.pipeline.render_to_image.core.*
on a618 has some failures on Android using vulkan-cts-1.2.8.0
. Other platforms are fine only because they lie about available system memory.
For example, after applying 0001-platform-surfaceless-more-system-memory.patch to report 1GB of system memory, I get these failures on surfaceless platform
dEQP-VK.pipeline.render_to_image.core.2d_array.huge.width_height.r8g8b8a8_unorm_d16_unorm
dEQP-VK.pipeline.render_to_image.core.2d_array.huge.width_height.r8g8b8a8_unorm_s8_uint
dEQP-VK.pipeline.render_to_image.core.2d_array.huge.width_height.r8g8b8a8_unorm_d24_unorm_s8_uint
dEQP-VK.pipeline.render_to_image.core.2d_array.huge.width_height.r8g8b8a8_unorm_d32_sfloat_s8_uint
dEQP-VK.pipeline.render_to_image.core.cube.huge.width_height.r8g8b8a8_unorm
dEQP-VK.pipeline.render_to_image.core.cube.huge.width_height.r8g8b8a8_unorm_d16_unorm
dEQP-VK.pipeline.render_to_image.core.cube.huge.width_height.r8g8b8a8_unorm_s8_uint
dEQP-VK.pipeline.render_to_image.core.cube.huge.width_height.r8g8b8a8_unorm_d24_unorm_s8_uint
dEQP-VK.pipeline.render_to_image.core.cube_array.huge.width_height.r8g8b8a8_unorm
dEQP-VK.pipeline.render_to_image.core.cube_array.huge.width_height.r8g8b8a8_unorm_d24_unorm_s8_uint
Looking at the qpa logs,
# dEQP-VK.pipeline.render_to_image.core.2d_array.huge.width_height.r8g8b8a8_unorm_d16_unorm
before: Using an image with size (width, height, depth, layers) = (2048, 4096, 1, 4)
after: Using an image with size (width, height, depth, layers) = (4096, 4096, 1, 4)
we can see the tests use larger images for testing.
I can work around the failures by either TU_DEBUG=sysmem
or TU_DEBUG=nobin
.
Edited by Chia-I Wu